[project]
name = "llm-human-replica"
version = "0.1.0"
description = ""
authors = [
    {name = "RohitPawar001",email = "rppawar491@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "llm_human_replica", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
